# aauth-mission

./: .cursorignore  .gitignore  AGENTSERVER.md  AUTHZ-HUERISTICS.md  CLIENTS.md  DATABASE.md  EVOLUTION.md  README.md  SIG-KEY.md  SPEC copy.md  TRUST.md  agent-server-plan.md  combine-as-ps.md  pyproject.toml  run-server.sh
agent_server/: __init__.py  exceptions.py  models.py
agent_server/api/: metadata.py  person_routes.py  refresh_routes.py  registration_routes.py
agent_server/http/: app.py  bodies.py  config.py  deps.py  errors.py
agent_server/impl/: __init__.py  memory_bindings.py  memory_registrations.py  memory_replay.py
agent_server/service/: http_sig.py  signing.py  token_factory.py
agent_server/ui/: agents.html  index.html  registrations.html
agent_server/utils/: agent_id.py
alembic/: env.py
alembic/versions/: 001_initial_unified.py  002_add_issued_tokens.py
mm/: __init__.py  exceptions.py  models.py
mm/api/: __init__.py  admin_routes.py  agent_routes.py  metadata.py  user_mission_routes.py  user_routes.py
mm/federation/: __init__.py  as_discovery.py  as_federator.py  identity_provider.py
mm/http/: __init__.py  app.py  config.py  deps.py  encoding.py  errors.py  mission_header.py
mm/impl/: __init__.py  backend.py  fake_federator.py  memory_consent.py  memory_control.py  memory_lifecycle.py  memory_pending.py  memory_token.py  mission_guards.py  mission_utils.py  ps_governance.py
mm/service/: __init__.py  mission_control.py  mission_lifecycle.py  pending_store.py  token_broker.py  user_consent.py
persistence/: __init__.py  as_stores.py  engine.py  models.py  serde.py  sql_issued.py  sql_mission.py  sql_pending.py  trust_db.py  wiring.py
portal/: __init__.py
portal/http/: app.py  deps.py
portal/ui/: consent.html  index.html  portal.html
ps/: __init__.py  exceptions.py  models.py
ps/api/: __init__.py  admin_routes.py  agent_routes.py  metadata.py  trust_routes.py  user_mission_routes.py  user_routes.py
ps/federation/: __init__.py  agent_jwks.py  agent_server_trust.py  as_discovery.py  as_federator.py  identity_provider.py  resource_jwks.py  sync_http.py
ps/http/: __init__.py  app.py  config.py  deps.py  encoding.py  errors.py  mission_header.py
ps/impl/: __init__.py  backend.py  fake_federator.py  memory_consent.py  memory_control.py  memory_issued.py  (+7 more)
scripts/: .hwk-ps-client-key.pem  _hwk_ps_client.py  agent-server-signed-walkthrough.py  agent-server-walkthrough.sh  hwk-mm-client.sh  hwk-ps-client.sh  hwk_mm_client.py  mm-demo.sh  ps-demo.sh  ps-token-mode3.py
tests/: test_agent_server_register.py  test_mm_api_smoke.py  test_persistence_sqlite.py  test_ps_api_smoke.py  test_ps_token_endpoint.py
(+26 files in other folders)
