[project]
name = "aauth-person-server"
version = "0.1.0"
description = "AAuth Person Server + Agent Server reference implementation (in-memory) per draft-hardt-aauth-protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aauth==0.3.2",
    "aiofiles>=23.2.0",
    "alembic>=1.13.0",
    "bleach>=6.0",
    "cryptography>=42.0.0",
    "fastapi>=0.109.0",
    "PyJWT>=2.8.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
]

[tool.setuptools.package-data]
"ps" = ["http/static/**/*"]
"agent_server" = ["ui/**/*", "ui/js/**/*"]
"portal" = ["ui/**/*", "ui/js/**/*"]

[project.optional-dependencies]
dev = ["httpx>=0.26.0", "pytest>=8.0.0", "psycopg[binary]>=3.1.0"]
database = ["psycopg[binary]>=3.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ps*", "agent_server*", "portal*", "persistence*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
